Fix some small screen issues

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img src="breakingvaseInv.png" alt="picture" class="w3-image" width="40%" height="40%" style="padding-bottom: 0%;">
         </header>
     
-        <block style="text-align: center; align-items: center; margin: auto; padding-bottom: 0%;">
+        <block class="w3-hide-small w3-hide-medium" style="text-align: center; align-items: center; margin: auto; padding-bottom: 0%;">
             <hr style="width:50%; text-align: center; align-items: center; margin: auto;" class="w3-opacity">
             <br>
             <p class="grid-a-container" style="align-self: center; margin: auto; background-color: aqua; color: #222; width: 50%; border-radius: 50px;">
@@ -76,6 +76,23 @@
                 <i class="fa-solid fa-4x fa-person-circle-plus"></i>
                 <i style="font-size: 20px; padding-top: 20px;">Online payment available</i>
                 <i style="font-size: 20px; padding-top: 20px;">Telehealth appointments available</i>
+                <i style="font-size: 20px; padding-top: 20px;">New clients welcomed</i>
+            </p>
+            <br>
+            <hr style="width:50%; text-align: center; align-items: center; margin: auto;" class="w3-opacity">
+        </block>
+
+        <block class="w3-hide-large" style="text-align: center; align-items: center; margin: auto; padding-bottom: 0%;">
+            <hr style="width:50%; text-align: center; align-items: center; margin: auto;" class="w3-opacity">
+            <br>
+            <p class="grid-a-container-small" style="align-self: center; margin: auto; background-color: aqua; color: #222; width: 50%; border-radius: 50px;">
+                <i class="fa-regular fa-4x fa-credit-card grid-a-item"></i>
+                <i style="font-size: 20px; padding-top: 20px;">Online payment available</i>
+                <br>
+                <i class="fa-solid fa-4x fa-video grid-a-item"></i>
+                <i style="font-size: 20px; padding-top: 20px;">Telehealth appointments available</i>
+                <br>
+                <i class="fa-solid fa-4x fa-person-circle-plus"></i>
                 <i style="font-size: 20px; padding-top: 20px;">New clients welcomed</i>
             </p>
             <br>
