--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Icon Bar (Sidebar - hidden on small screens) -->
     <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
         <!-- Avatar image in top left corner -->
-        <img src="/breakingvase.png" style="width:100%">
+        <img src="/images/breakingvase.png" style="width:100%">
         <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
         <i class="fa fa-home w3-xxlarge"></i>
         <p>HOME</p>
@@ -64,7 +64,7 @@
         <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <h1 class="w3-jumbo"><span class="w3-hide-small"></span>Neta Weber, LPC, CCH</h1>
         <p><span class="w3-hide-small">Counseling for </span>OCD, BFRBs, Panic, Stress, Anxiety and Relationships</p>
-        <img src="breakingvaseInv.png" alt="picture" class="w3-image" width="40%" height="40%" style="padding-bottom: 0%;">
+        <img src="/images/breakingvaseInv.png" alt="picture" class="w3-image" width="40%" height="40%" style="padding-bottom: 0%;">
         </header>
     
         <block class="w3-hide-small w3-hide-medium" style="text-align: center; align-items: center; margin: auto; padding-bottom: 0%;">
