--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <h1 class="w3-jumbo"><span class="w3-hide-small"></span>Neta Weber, LPC, CCH</h1>
         <p><span class="w3-hide-small">Counseling for </span>OCD, BFRBs, Panic, Stress, Anxiety and Relationships</p>
-        <img src="/images/breakingvaseInv.png" alt="picture" class="w3-image" width="40%" height="40%" style="padding-bottom: 0%;">
+        <img src="/images/Neta_PSY.png" alt="picture" class="w3-image" width="20%" height="20%" style="padding-bottom: 0%; border-radius: 500px;">
         </header>
     
         <block class="w3-hide-small w3-hide-medium" style="text-align: center; align-items: center; margin: auto; padding-bottom: 0%;">
